--- a/package.json
+++ b/package.json
@@ -3,13 +3,18 @@
   "version": "0.1.0",
   "description": "React and TypeScript example starter project",
   "private": false,
-  "homepage":"./",
+  "homepage": "./",
   "keywords": [
     "typescript",
     "react",
     "starter"
   ],
   "dependencies": {
+    "@emotion/react": "11.9.0",
+    "@emotion/styled": "11.8.1",
+    "@fontsource/roboto": "4.5.5",
+    "@mui/icons-material": "5.6.2",
+    "@mui/material": "5.6.4",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-scripts": "5.0.1"
