--- a/.eslintrc
+++ b/.eslintrc
@@ -19,6 +19,7 @@
     },
     "rules": {
         "@typescript-eslint/no-empty-function": "off",
+        "@typescript-eslint/no-explicit-any": "off",
         "comma-dangle": ["error", "never"],
         "import/extensions": ["error", "ignorePackages", { "js": "never", "jsx": "never", "ts": "never", "tsx": "never" }],
         "jsx-a11y/alt-text": "off",
@@ -28,6 +29,7 @@
         "no-shadow": "off",
         "react/jsx-filename-extension": ["error", { "extensions": [".tsx"] }],
         "react/jsx-indent-props": ["error", 2],
+        "react/jsx-props-no-spreading": "off",
         "react/react-in-jsx-scope": "off"
     }
 }
