--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,8 @@
 
 # dependencies
 /node_modules
-package-lock.json
+/.pnp
+.pnp.js
 
 # testing
 /coverage
@@ -10,8 +11,13 @@ package-lock.json
 # production
 /build
 
-# environment
-.env.local
-
 # misc
 .DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
