--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,13 @@
 
 # dependencies
 /node_modules
-/.pnp
-.pnp.js
+package-lock.json
+
+# log
+npm-debug.log*
+
+# environment
+.env.local
 
 # testing
 /coverage
@@ -13,11 +18,3 @@
 
 # misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
