--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-web-boilerplate",
+  "name": "react-mui-ts-starter",
   "version": "0.1.0",
   "description": "React, MUI and TypeScript starter project",
   "private": false,
@@ -30,17 +30,24 @@
     "react-scripts": "5.0.1"
   },
   "devDependencies": {
-    "@types/react": "17.0.20",
-    "@types/react-dom": "17.0.9",
-    "@typescript-eslint/eslint-plugin": "5.22.0",
-    "@typescript-eslint/parser": "5.22.0",
+    "@testing-library/jest-dom": "5.16.4",
+    "@testing-library/react": "13.2.0",
+    "@testing-library/user-event": "13.5.0",
+    "@types/jest": "27.5.0",
+    "@types/node": "16.11.34",
+    "@types/react": "18.0.9",
+    "@types/react-dom": "18.0.3",
+    "@typescript-eslint/eslint-plugin": "5.23.0",
+    "@typescript-eslint/parser": "5.23.0",
     "env-cmd": "10.1.0",
-    "eslint": "8.14.0",
+    "eslint": "8.15.0",
     "eslint-config-airbnb": "19.0.4",
+    "eslint-plugin-react": "7.29.4",
     "postcss-normalize": "10.0.1",
     "stylelint": "14.8.2",
     "stylelint-config-standard": "25.0.0",
-    "typescript": "4.4.2"
+    "typescript": "4.6.4",
+    "web-vitals": "2.1.4"
   },
   "scripts": {
     "build": "env-cmd -f ./env/.env.production react-scripts build",
@@ -49,14 +56,17 @@
     "build:qa": "env-cmd -f ./env/.env.qa react-scripts build",
     "build:stg": "env-cmd -f ./env/.env.staging react-scripts build",
     "eject": "react-scripts eject",
-    "lint": "./node_modules/.bin/eslint --ext .js --ext .jsx --ext .ts --ext .tsx src/",
-    "stylelint": "./node_modules/.bin/stylelint \"src/**/*.css\"",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx src/",
+    "lint:fix": "eslint --fix --ext .js,.jsx,.ts,.tsx src/",
     "start": "env-cmd -f ./env/.env.local react-scripts start",
-    "test": "env-cmd -f ./env/.env.test CI=true react-scripts test --env=jsdom --coverage"
+    "stylelint": "./node_modules/.bin/stylelint \"src/**/*.css\"",
+    "test": "env-cmd -f ./env/.env.test react-scripts test --env=jsdom --coverage --watchAll=false"
   },
   "jest": {
     "collectCoverageFrom": [
-      "src/**/*.ts"
+      "src/**/*",
+      "!src/index.tsx",
+      "!src/util/report-web-vitals.ts"
     ]
   },
   "browserslist": {
