--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "env-cmd": "10.1.0",
     "eslint": "8.15.0",
     "eslint-config-airbnb": "19.0.4",
+    "eslint-plugin-jest": "26.2.2",
     "eslint-plugin-react": "7.29.4",
     "eslint-plugin-react-hooks": "4.5.0",
     "postcss-normalize": "10.0.1",
