--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": false,
   "homepage": "./",
   "keywords": [
+    "2022",
     "airbnb",
     "editorconfig",
     "emotion",
@@ -26,8 +27,11 @@
     "@fontsource/roboto": "4.5.5",
     "@mui/icons-material": "5.6.2",
     "@mui/material": "5.6.4",
+    "i18next": "21.8.3",
+    "i18next-browser-languagedetector": "6.1.4",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-i18next": "11.16.9",
     "react-scripts": "5.0.1"
   },
   "devDependencies": {
@@ -67,7 +71,8 @@
   },
   "jest": {
     "collectCoverageFrom": [
-      "src/**/*",
+      "src/**/*.ts",
+      "src/**/*.tsx",
       "!src/index.tsx",
       "!src/util/report-web-vitals.ts"
     ]
