--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
+  // Use IntelliSense to learn about possible attributes.
+  // Hover to view descriptions of existing attributes.
+  // Learn more: https://code.visualstudio.com/docs/getstarted/settings
   "explorer.sortOrder": "type",
   "files.eol": "\n",
   "search.exclude": {
@@ -6,5 +9,8 @@
     "**/coverage": true,
     "**/node_modules": true,
     "package-lock.json": true
+  },
+  "editor.codeActionsOnSave": {
+    "source.fixAll": true
   }
 }
