--- a/.eslintrc
+++ b/.eslintrc
@@ -47,6 +47,7 @@
     "quotes": ["error", "single"],
     "react-hooks/exhaustive-deps": "warn",
     "react-hooks/rules-of-hooks": "error",
+    "react/function-component-definition": "off",
     "react/jsx-filename-extension": ["error", { "extensions": [".tsx"] }],
     "react/jsx-indent-props": ["error", 2],
     "react/jsx-props-no-spreading": "off",
