--- a/package.json
+++ b/package.json
@@ -7,17 +7,15 @@
   "keywords": [
     "2022",
     "airbnb",
-    "editorconfig",
-    "emotion",
     "es6",
     "eslint",
     "hooks",
-    "materialui",
+    "i18next",
+    "jest",
     "mui",
-    "npm",
     "react",
-    "roboto",
     "starter",
+    "storybook",
     "stylelint",
     "typescript",
     "vscode"
@@ -36,6 +34,16 @@
     "react-scripts": "5.0.1"
   },
   "devDependencies": {
+    "@storybook/addon-actions": "6.5.3",
+    "@storybook/addon-essentials": "6.5.3",
+    "@storybook/addon-interactions": "6.5.3",
+    "@storybook/addon-links": "6.5.3",
+    "@storybook/builder-webpack5": "6.5.3",
+    "@storybook/manager-webpack5": "6.5.3",
+    "@storybook/node-logger": "6.5.3",
+    "@storybook/preset-create-react-app": "4.1.0",
+    "@storybook/react": "6.5.3",
+    "@storybook/testing-library": "0.0.11",
     "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "13.2.0",
     "@testing-library/user-event": "13.5.0",
@@ -45,6 +53,7 @@
     "@types/react-dom": "18.0.3",
     "@typescript-eslint/eslint-plugin": "5.23.0",
     "@typescript-eslint/parser": "5.23.0",
+    "babel-plugin-named-exports-order": "0.0.2",
     "env-cmd": "10.1.0",
     "eslint": "8.15.0",
     "eslint-config-airbnb": "19.0.4",
@@ -52,13 +61,16 @@
     "eslint-plugin-react": "7.29.4",
     "eslint-plugin-react-hooks": "4.5.0",
     "postcss-normalize": "10.0.1",
+    "prop-types": "15.8.1",
     "stylelint": "14.8.2",
     "stylelint-config-standard": "25.0.0",
     "typescript": "4.6.4",
-    "web-vitals": "2.1.4"
+    "web-vitals": "2.1.4",
+    "webpack": "5.72.1"
   },
   "scripts": {
     "build": "env-cmd -f ./env/.env.production react-scripts build",
+    "build:bok": "build-storybook -s public",
     "build:dev": "env-cmd -f ./env/.env.development react-scripts build",
     "build:loc": "env-cmd -f ./env/.env.local react-scripts build",
     "build:qa": "env-cmd -f ./env/.env.qa react-scripts build",
@@ -67,6 +79,7 @@
     "lint": "eslint --ext .js,.jsx,.ts,.tsx src/",
     "lint:fix": "eslint --fix --ext .js,.jsx,.ts,.tsx src/",
     "start": "env-cmd -f ./env/.env.local react-scripts start",
+    "storybook": "start-storybook -p 3001 -s public",
     "stylelint": "./node_modules/.bin/stylelint \"src/**/*.css\"",
     "test": "env-cmd -f ./env/.env.test react-scripts test --env=jsdom --coverage --watchAll=false"
   },
@@ -74,6 +87,8 @@
     "collectCoverageFrom": [
       "src/**/*.ts",
       "src/**/*.tsx",
+      "!src/**/*.stories.tsx",
+      "!src/app.tsx",
       "!src/index.tsx",
       "!src/util/report-web-vitals.ts"
     ]
