--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-mui-ts-starter",
+  "name": "react-mui-ts-template",
   "version": "0.1.0",
-  "description": "React, MUI and TypeScript starter project",
+  "description": "React, MUI and TypeScript template",
   "private": false,
   "homepage": "./",
   "keywords": [
@@ -14,9 +14,10 @@
     "jest",
     "mui",
     "react",
-    "starter",
+    "spa",
     "storybook",
     "stylelint",
+    "template",
     "typescript",
     "vscode"
   ],
@@ -70,10 +71,10 @@
   },
   "scripts": {
     "build": "env-cmd -f ./env/.env.production react-scripts build",
-    "build:bok": "build-storybook -s public",
     "build:dev": "env-cmd -f ./env/.env.development react-scripts build",
     "build:loc": "env-cmd -f ./env/.env.local react-scripts build",
     "build:qa": "env-cmd -f ./env/.env.qa react-scripts build",
+    "build:sbk": "build-storybook -s public",
     "build:stg": "env-cmd -f ./env/.env.staging react-scripts build",
     "eject": "react-scripts eject",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx src/",
