--- a/package.json
+++ b/package.json
@@ -35,15 +35,15 @@
     "react-scripts": "5.0.1"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "6.5.3",
-    "@storybook/addon-essentials": "6.5.3",
-    "@storybook/addon-interactions": "6.5.3",
-    "@storybook/addon-links": "6.5.3",
-    "@storybook/builder-webpack5": "6.5.3",
-    "@storybook/manager-webpack5": "6.5.3",
-    "@storybook/node-logger": "6.5.3",
-    "@storybook/preset-create-react-app": "4.1.0",
-    "@storybook/react": "6.5.3",
+    "@storybook/addon-actions": "6.5.5",
+    "@storybook/addon-essentials": "6.5.5",
+    "@storybook/addon-interactions": "6.5.5",
+    "@storybook/addon-links": "6.5.5",
+    "@storybook/builder-webpack5": "6.5.5",
+    "@storybook/manager-webpack5": "6.5.5",
+    "@storybook/node-logger": "6.5.5",
+    "@storybook/preset-create-react-app": "4.1.1",
+    "@storybook/react": "6.5.5",
     "@storybook/testing-library": "0.0.11",
     "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "13.2.0",
@@ -68,6 +68,9 @@
     "typescript": "4.6.4",
     "web-vitals": "2.1.4",
     "webpack": "5.72.1"
+  },
+  "overrides": {
+    "react-refresh": "0.13.0"
   },
   "scripts": {
     "build": "env-cmd -f ./env/.env.production react-scripts build",
