Fixing Storybook issues

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-scripts": "5.0.1"
   },
   "devDependencies": {
+    "@mdx-js/react": "2.1.1",
     "@storybook/addon-actions": "6.5.5",
     "@storybook/addon-essentials": "6.5.5",
     "@storybook/addon-interactions": "6.5.5",
