--- a/.editorconfig
+++ b/.editorconfig
@@ -1,3 +1,6 @@
+# EditorConfig helps maintain consistent coding styles
+# for multiple developers working on the same project.
+# Learn more: https://editorconfig.org
 root = true
 
 [*]
@@ -7,6 +10,3 @@ indent_size = 2
 indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
-
-[*.json]
-indent_size = 2
