--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,15 +2,14 @@
   // Use IntelliSense to learn about possible attributes.
   // Hover to view descriptions of existing attributes.
   // Learn more: https://code.visualstudio.com/docs/getstarted/settings
+  "editor.codeActionsOnSave": {
+    "source.fixAll": true
+  },
   "explorer.sortOrder": "type",
   "files.eol": "\n",
   "search.exclude": {
-    "**/build": true,
-    "**/coverage": true,
     "**/node_modules": true,
+    "**/out": true,
     "package-lock.json": true
-  },
-  "editor.codeActionsOnSave": {
-    "source.fixAll": true
   }
 }
