--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "private": false,
   "homepage": "./",
   "keywords": [
-    "2022",
     "airbnb",
+    "emotion",
     "es6",
     "eslint",
     "hooks",
@@ -14,6 +14,7 @@
     "jest",
     "mui",
     "react",
+    "roboto",
     "spa",
     "storybook",
     "stylelint",
@@ -22,79 +23,81 @@
     "vscode"
   ],
   "dependencies": {
-    "@emotion/react": "11.9.0",
-    "@emotion/styled": "11.8.1",
-    "@fontsource/roboto": "4.5.5",
-    "@mui/icons-material": "5.6.2",
-    "@mui/material": "5.6.4",
-    "i18next": "21.8.3",
-    "i18next-browser-languagedetector": "6.1.4",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-i18next": "11.16.9",
-    "react-scripts": "5.0.1"
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@fontsource/roboto": "^4.5.7",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.8.4",
+    "i18next": "^21.8.9",
+    "i18next-browser-languagedetector": "^6.1.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-i18next": "^11.17.2",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "@mdx-js/react": "2.1.1",
-    "@storybook/addon-actions": "6.5.5",
-    "@storybook/addon-essentials": "6.5.5",
-    "@storybook/addon-interactions": "6.5.5",
-    "@storybook/addon-links": "6.5.5",
-    "@storybook/builder-webpack5": "6.5.5",
-    "@storybook/manager-webpack5": "6.5.5",
-    "@storybook/node-logger": "6.5.5",
-    "@storybook/preset-create-react-app": "4.1.1",
-    "@storybook/react": "6.5.5",
-    "@storybook/testing-library": "0.0.11",
-    "@testing-library/jest-dom": "5.16.4",
-    "@testing-library/react": "13.2.0",
-    "@testing-library/user-event": "13.5.0",
-    "@types/jest": "27.5.0",
-    "@types/node": "16.11.34",
-    "@types/react": "18.0.9",
-    "@types/react-dom": "18.0.3",
-    "@typescript-eslint/eslint-plugin": "5.23.0",
-    "@typescript-eslint/parser": "5.23.0",
-    "babel-plugin-named-exports-order": "0.0.2",
-    "env-cmd": "10.1.0",
-    "eslint": "8.15.0",
-    "eslint-config-airbnb": "19.0.4",
-    "eslint-plugin-jest": "26.2.2",
-    "eslint-plugin-react": "7.29.4",
-    "eslint-plugin-react-hooks": "4.5.0",
-    "postcss-normalize": "10.0.1",
-    "prop-types": "15.8.1",
-    "stylelint": "14.8.2",
-    "stylelint-config-standard": "25.0.0",
-    "typescript": "4.6.4",
-    "web-vitals": "2.1.4",
-    "webpack": "5.72.1"
-  },
-  "overrides": {
-    "react-refresh": "0.13.0"
+    "@storybook/addon-actions": "^6.5.9",
+    "@storybook/addon-essentials": "^6.5.9",
+    "@storybook/addon-interactions": "^6.5.9",
+    "@storybook/addon-links": "^6.5.9",
+    "@storybook/builder-webpack5": "^6.5.9",
+    "@storybook/manager-webpack5": "^6.5.9",
+    "@storybook/node-logger": "^6.5.9",
+    "@storybook/preset-create-react-app": "^4.1.2",
+    "@storybook/react": "^6.5.9",
+    "@storybook/testing-library": "^0.0.13",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.11.41",
+    "@types/react": "^18.0.12",
+    "@types/react-dom": "^18.0.5",
+    "@typescript-eslint/eslint-plugin": "^5.28.0",
+    "@typescript-eslint/parser": "^5.28.0",
+    "babel-plugin-named-exports-order": "^0.0.2",
+    "env-cmd": "^10.1.0",
+    "eslint": "^8.17.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-storybook": "^0.5.12",
+    "prop-types": "^15.8.1",
+    "stylelint": "^14.9.1",
+    "stylelint-config-standard": "^26.0.0",
+    "typescript": "^4.7.3",
+    "webpack": "^5.73.0"
   },
   "scripts": {
-    "build": "env-cmd -f ./env/.env.production react-scripts build",
-    "build:dev": "env-cmd -f ./env/.env.development react-scripts build",
-    "build:loc": "env-cmd -f ./env/.env.local react-scripts build",
-    "build:qa": "env-cmd -f ./env/.env.qa react-scripts build",
-    "build:sbk": "build-storybook -s public",
-    "build:stg": "env-cmd -f ./env/.env.staging react-scripts build",
+    "build": "env-cmd --no-override -f ./.env-override/.env.production react-scripts build",
+    "build:d": "env-cmd --no-override -f ./.env-override/.env.development react-scripts build",
+    "build:l": "env-cmd --no-override -f ./.env-override/.env.local react-scripts build",
+    "build:q": "env-cmd --no-override -f ./.env-override/.env.qa react-scripts build",
+    "build:s": "env-cmd --no-override -f ./.env-override/.env.staging react-scripts build",
     "eject": "react-scripts eject",
+    "init": "npm ci --loglevel=error --no-audit --no-fund",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx src/",
-    "lint:fix": "eslint --fix --ext .js,.jsx,.ts,.tsx src/",
-    "start": "env-cmd -f ./env/.env.local react-scripts start",
-    "storybook": "start-storybook -p 3001 -s public",
-    "stylelint": "./node_modules/.bin/stylelint \"src/**/*.css\"",
-    "test": "env-cmd -f ./env/.env.test react-scripts test --env=jsdom --coverage --watchAll=false"
+    "lint:f": "eslint --fix --ext .js,.jsx,.ts,.tsx src/",
+    "lint:c": "./node_modules/.bin/stylelint \"src/**/*.css\"",
+    "sbook": "env-cmd --no-override -f ./.env-override/.env.local start-storybook -p 3001 -s public",
+    "sbook:d": "env-cmd --no-override -f ./.env-override/.env.development build-storybook -s public -o ./out/storybook/development",
+    "sbook:l": "env-cmd --no-override -f ./.env-override/.env.local build-storybook -s public -o ./out/storybook/local",
+    "sbook:p": "env-cmd --no-override -f ./.env-override/.env.production build-storybook -s public -o ./out/storybook/production",
+    "sbook:q": "env-cmd --no-override -f ./.env-override/.env.qa build-storybook -s public -o ./out/storybook/qa",
+    "sbook:s": "env-cmd --no-override -f ./.env-override/.env.staging build-storybook -s public -o ./out/storybook/staging",
+    "start": "env-cmd --no-override -f ./.env-override/.env.local react-scripts start",
+    "test": "env-cmd --no-override -f ./.env-override/.env.test react-scripts test --env=jsdom --coverage --coverageDirectory='./out/coverage' --watchAll=false"
   },
   "jest": {
     "collectCoverageFrom": [
       "src/**/*.ts",
       "src/**/*.tsx",
       "!src/**/*.stories.tsx",
-      "!src/app.tsx",
       "!src/index.tsx",
+      "!src/react-app-env.d.ts",
       "!src/util/report-web-vitals.ts"
     ]
   },
