--- a/.eslintignore
+++ b/.eslintignore
@@ -1,3 +1,4 @@
-build/
-coverage/
+# Tells ESLint to ignore specific files and directories.
+# Learn more: https://eslint.org/docs/user-guide/configuring/ignoring-code
 node_modules/
+out/
