--- a/.gitignore
+++ b/.gitignore
@@ -2,16 +2,16 @@
 
 # dependencies
 /node_modules
-
-# log
-npm-debug.log*
-
-# testing
-/coverage
+/.pnp
+.pnp.js
 
 # production
-/build
-/storybook-static
+/out
 
 # misc
 .DS_Store
+
+# log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
