Added support for HTTPS

--- a/.env-override/.env.development
+++ b/.env-override/.env.development
@@ -1,5 +1,10 @@
 # Variables in this file are injected by the following scripts:
 # - "build:d" Builds the App to `out/build/development`
 # - "sbook:d" Builds Storybook to `out/storybook/development`
-BUILD_PATH='./out/build/development'
+
+# Don't touch
+BUILD_PATH='./out/build/development' # Only applies to "build:d" script
 REACT_APP_ENV='development'
+
+# Add your own variables below, starting with REACT_APP_
+REACT_APP_API_URL='http://development.com/api/v1'
