--- a/.env-override/.env.local
+++ b/.env-override/.env.local
@@ -3,5 +3,18 @@
 # - "sbook"   Runs Storybook in http://localhost:3001
 # - "build:l" Builds the App to `out/build/local`
 # - "sbook:l" Builds Storybook to `out/storybook/local`
-BUILD_PATH='./out/build/local'
+
+# Don't touch
+BUILD_PATH='./out/build/local' # Only applies to "build:l" script
 REACT_APP_ENV='local'
+
+# Using HTTPS in Local Development
+# Only applies to "start" script
+# Ref: https://create-react-app.dev/docs/using-https-in-development
+HTTPS=false
+PORT=3000
+SSL_CRT_FILE=cert.crt
+SSL_KEY_FILE=cert.key
+
+# Add your own variables below, starting with REACT_APP_
+REACT_APP_API_URL='http://localhost:5000/api/v1'
