--- a/.env-override/.env.production
+++ b/.env-override/.env.production
@@ -1,5 +1,10 @@
 # Variables in this file are injected by the following scripts:
 # - "build"   Builds the App to `out/build/production`
 # - "sbook:p" Builds Storybook to `out/storybook/production`
-BUILD_PATH='./out/build/production'
+
+# Don't touch
+BUILD_PATH='./out/build/production' # Only applies to "build" script
 REACT_APP_ENV='production'
+
+# Add your own variables below, starting with REACT_APP_
+REACT_APP_API_URL='http://production.com/api/v1'
