--- a/.env-override/.env.qa
+++ b/.env-override/.env.qa
@@ -1,5 +1,10 @@
 # Variables in this file are injected by the following scripts:
 # - "build:q" Builds the App to `out/build/qa`
 # - "sbook:q" Builds Storybook to `out/storybook/qa`
-BUILD_PATH='./out/build/qa'
+
+# Don't touch
+BUILD_PATH='./out/build/qa' # Only applies to "build:q" script
 REACT_APP_ENV='qa'
+
+# Add your own variables below, starting with REACT_APP_
+REACT_APP_API_URL='http://qa.com/api/v1'
