--- a/.env-override/.env.staging
+++ b/.env-override/.env.staging
@@ -1,5 +1,10 @@
 # Variables in this file are injected by the following scripts:
 # - "build:s" Builds the App to `out/build/staging`
 # - "sbook:s" Builds Storybook to `out/storybook/staging`
-BUILD_PATH='./out/build/staging'
+
+# Don't touch
+BUILD_PATH='./out/build/staging' # Only applies to "build:s" script
 REACT_APP_ENV='staging'
+
+# Add your own variables below, starting with REACT_APP_
+REACT_APP_API_URL='https://staging.com/api/v1'
