--- a/.env-override/.env.test
+++ b/.env-override/.env.test
@@ -1,4 +1,8 @@
 # Variables in this file are injected by the following scripts:
 # - "test" Executes Unit Tests outputting to `out/coverage`
-BUILD_PATH='./out/build/test'
+
+# Don't touch
 REACT_APP_ENV='test'
+
+# Add your own variables below, starting with REACT_APP_
+REACT_APP_API_URL=='https://test.com/api/v1'
