Updated HTTPS info

--- a/.env-override/.env.local
+++ b/.env-override/.env.local
@@ -11,10 +11,11 @@ REACT_APP_ENV='local'
 # Using HTTPS in Local Development
 # Only applies to "start" script
 # Ref: https://create-react-app.dev/docs/using-https-in-development
+# Ref: https://www.mariokandut.com/how-to-setup-https-ssl-in-localhost-react
 HTTPS=false
 PORT=3000
-SSL_CRT_FILE=cert.crt
-SSL_KEY_FILE=cert.key
+SSL_CRT_FILE=localhost.pem
+SSL_KEY_FILE=localhost-key.pem
 
 # Add your own variables below, starting with REACT_APP_
 REACT_APP_API_URL='http://localhost:5000/api/v1'
