--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,6 @@
 {
-  // See http://go.microsoft.com/fwlink/?LinkId=827846
-  // for the documentation about the extensions.json format
+  // Workspace recommended extensions.
+  // Learn more:  http://go.microsoft.com/fwlink/?LinkId=827846
   "recommendations": [
     "EditorConfig.EditorConfig",
     "Tyriar.sort-lines",
