Reordered recommended extensions

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,13 +2,13 @@
   // Workspace recommended extensions.
   // Learn more:  http://go.microsoft.com/fwlink/?LinkId=827846
   "recommendations": [
-    "EditorConfig.EditorConfig",
-    "Tyriar.sort-lines",
     "christian-kohler.npm-intellisense",
     "dbaeumer.vscode-eslint",
+    "editorconfig.editorconfig",
     "mikestead.dotenv",
     "silvenon.mdx",
     "stylelint.vscode-stylelint",
+    "tyriar.sort-lines",
     "vscode-icons-team.vscode-icons"
   ]
 }
