Updated .env files comments

--- a/.env-override/.env.development
+++ b/.env-override/.env.development
@@ -3,7 +3,7 @@
 # - "sbook:d" Builds Storybook to `out/storybook/development`
 
 # Don't touch
-BUILD_PATH='./out/build/development' # Only applies to "build:d" script
+BUILD_PATH='./out/build/development'
 REACT_APP_ENV='development'
 
 # Add your own variables below, starting with REACT_APP_
