--- a/.env-override/.env.local
+++ b/.env-override/.env.local
@@ -5,7 +5,7 @@
 # - "sbook:l" Builds Storybook to `out/storybook/local`
 
 # Don't touch
-BUILD_PATH='./out/build/local' # Only applies to "build:l" script
+BUILD_PATH='./out/build/local'
 REACT_APP_ENV='local'
 
 # Using HTTPS in Local Development
