--- a/.env-override/.env.production
+++ b/.env-override/.env.production
@@ -3,7 +3,7 @@
 # - "sbook:p" Builds Storybook to `out/storybook/production`
 
 # Don't touch
-BUILD_PATH='./out/build/production' # Only applies to "build" script
+BUILD_PATH='./out/build/production'
 REACT_APP_ENV='production'
 
 # Add your own variables below, starting with REACT_APP_
