--- a/.env-override/.env.qa
+++ b/.env-override/.env.qa
@@ -3,7 +3,7 @@
 # - "sbook:q" Builds Storybook to `out/storybook/qa`
 
 # Don't touch
-BUILD_PATH='./out/build/qa' # Only applies to "build:q" script
+BUILD_PATH='./out/build/qa'
 REACT_APP_ENV='qa'
 
 # Add your own variables below, starting with REACT_APP_
