--- a/.env-override/.env.staging
+++ b/.env-override/.env.staging
@@ -3,7 +3,7 @@
 # - "sbook:s" Builds Storybook to `out/storybook/staging`
 
 # Don't touch
-BUILD_PATH='./out/build/staging' # Only applies to "build:s" script
+BUILD_PATH='./out/build/staging'
 REACT_APP_ENV='staging'
 
 # Add your own variables below, starting with REACT_APP_
