Added HTTPS support for StoryBook

--- a/.env-override/.env.development
+++ b/.env-override/.env.development
@@ -1,6 +1,6 @@
 # Variables in this file are injected by the following scripts:
 # - "build:d" Builds the App to `out/build/development`
-# - "sbook:d" Builds Storybook to `out/storybook/development`
+# - "sb-build:d" Builds Storybook to `out/storybook/development`
 
 # Don't touch
 BUILD_PATH='./out/build/development'
