--- a/.env-override/.env.local
+++ b/.env-override/.env.local
@@ -1,21 +1,18 @@
 # Variables in this file are injected by the following scripts:
-# - "start"   Runs the App in http://localhost:3000
-# - "sbook"   Runs Storybook in http://localhost:3001
-# - "build:l" Builds the App to `out/build/local`
-# - "sbook:l" Builds Storybook to `out/storybook/local`
+# - "start"       Runs the App in http://localhost:3000
+# - "start-https" Runs the App in https://localhost:3000
+# - "sbook"       Runs Storybook in http://localhost:3001
+# - "sbook-https" Runs Storybook in https://localhost:3001
+# - "build:l"     Builds the App to `out/build/local`
+# - "sb-build:l"  Builds Storybook to `out/storybook/local`
 
 # Don't touch
 BUILD_PATH='./out/build/local'
 REACT_APP_ENV='local'
 
-# Using HTTPS in Local Development
-# Only applies to "start" script
-# Ref: https://create-react-app.dev/docs/using-https-in-development
-# Ref: https://www.mariokandut.com/how-to-setup-https-ssl-in-localhost-react
-HTTPS=false
+# You can adjust various development settings
+# Ref: https://create-react-app.dev/docs/advanced-configuration
 PORT=3000
-SSL_CRT_FILE=localhost.pem
-SSL_KEY_FILE=localhost-key.pem
 
 # Add your own variables below, starting with REACT_APP_
 REACT_APP_API_URL='http://localhost:5000/api/v1'
