--- a/.env-override/.env.qa
+++ b/.env-override/.env.qa
@@ -1,6 +1,6 @@
 # Variables in this file are injected by the following scripts:
 # - "build:q" Builds the App to `out/build/qa`
-# - "sbook:q" Builds Storybook to `out/storybook/qa`
+# - "sb-build:q" Builds Storybook to `out/storybook/qa`
 
 # Don't touch
 BUILD_PATH='./out/build/qa'
