--- a/.env-override/.env.staging
+++ b/.env-override/.env.staging
@@ -1,6 +1,6 @@
 # Variables in this file are injected by the following scripts:
 # - "build:s" Builds the App to `out/build/staging`
-# - "sbook:s" Builds Storybook to `out/storybook/staging`
+# - "sb-build:s" Builds Storybook to `out/storybook/staging`
 
 # Don't touch
 BUILD_PATH='./out/build/staging'
