--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react",
     "roboto",
     "spa",
+    "sass",
     "storybook",
     "stylelint",
     "template",
@@ -68,7 +69,7 @@
     "prop-types": "^15.8.1",
     "sass": "^1.53.0",
     "stylelint": "^14.9.1",
-    "stylelint-config-standard": "^26.0.0",
+    "stylelint-config-standard-scss": "^4.0.0",
     "typescript": "^4.7.4",
     "webpack": "^5.73.0"
   },
@@ -81,7 +82,7 @@
     "eject": "react-scripts eject",
     "init": "npm ci --loglevel=error --no-audit --no-fund",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx src/",
-    "lint:c": "./node_modules/.bin/stylelint \"src/**/*.css\"",
+    "lint:c": "./node_modules/.bin/stylelint \"src/**/*.{css,scss}\"",
     "lint:f": "eslint --fix --ext .js,.jsx,.ts,.tsx src/",
     "sb-build:d": "env-cmd --no-override -f ./.env-override/.env.development build-storybook -s public -o ./out/storybook/development",
     "sb-build:l": "env-cmd --no-override -f ./.env-override/.env.local build-storybook -s public -o ./out/storybook/local",
