--- a/.env
+++ b/.env
@@ -6,5 +6,11 @@
 # Restart the development server every time you change a variable.
 # Learn more: https://create-react-app.dev/docs/adding-custom-environment-variables
 # Advanced config: https://create-react-app.dev/docs/advanced-configuration
+
+# Variable to resolve SASS imports.
+# Ref: https://create-react-app.dev/docs/adding-a-sass-stylesheet
+SASS_PATH="./src/styles"
+
+# Add your own variables below, starting with REACT_APP_
 REACT_APP_PACKAGE_NAME=${npm_package_name}
 REACT_APP_PACKAGE_VERSION=${npm_package_version}
