Updated environment files

--- a/.env-override/.env.production
+++ b/.env-override/.env.production
@@ -1,6 +1,6 @@
 # Variables in this file are injected by the following scripts:
-# - "build"   Builds the App to `out/build/production`
-# - "sb-build:p" Builds Storybook to `out/storybook/production`
+# - "build"     Builds the App to `out/build/production`
+# - "sb-build"  Builds Storybook to `out/storybook/production`
 
 # Don't touch
 BUILD_PATH='./out/build/production'
