Updated README file

--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "mui",
     "react",
     "roboto",
-    "spa",
+    "router",
     "sass",
+    "spa",
     "storybook",
     "stylelint",
     "typescript",
