Updated comments on .en.local

--- a/.env-override/.env.local
+++ b/.env-override/.env.local
@@ -1,8 +1,8 @@
 # Variables in this file are injected by the following scripts:
 # - "start"       Runs the App in http://localhost:3000
-# - "start-https" Runs the App in https://localhost:3000
+# - "start-https" Runs the App in https://localhost:3000 (HTTPS)
 # - "sbook"       Runs Storybook in http://localhost:3001
-# - "sbook-https" Runs Storybook in https://localhost:3001
+# - "sbook-https" Runs Storybook in https://localhost:3001 (HTTPS)
 # - "build:l"     Builds the App to `out/build/local`
 # - "sb-build:l"  Builds Storybook to `out/storybook/local`
 
