--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,6 +1,5 @@
 {
-  // Use IntelliSense to learn about possible attributes.
-  // Hover to view descriptions of existing attributes.
+  // Launch Chrome against localhost
   // Learn more: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
