--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,16 +5,17 @@
     "source.fixAll": true
   },
   "files.eol": "\n",
+  "javascript.preferences.quoteStyle": "single",
+  "typescript.preferences.quoteStyle": "single",
   "search.exclude": {
     "node_modules": true,
     "out": true,
     "package-lock.json": true
   },
   "css.validate": false,
-  "less.validate": false,
   "scss.validate": false,
   "stylelint.validate": ["css", "scss"],
   "[scss]": {
     "editor.defaultFormatter": "sibiraj-s.vscode-scss-formatter"
-  },
+  }
 }
