Updated .env file

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# This file defines the variables common to all environments.
+# This file defines variables common to all environments.
 # Variables in this file will be overridden by each specific environment.
 # Shell variables never get overridden.
 # Name variables beginning with "REACT_APP_".
