Updated SASS_PATH value

--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@
 
 # Variable to resolve SASS imports.
 # Ref: https://create-react-app.dev/docs/adding-a-sass-stylesheet
-SASS_PATH="./src/styles"
+SASS_PATH='./src/styles'
 
 # Add your own variables below, starting with REACT_APP_
 REACT_APP_PACKAGE_NAME=${npm_package_name}
