Updated comments on env files

--- a/.env-override/.env.development
+++ b/.env-override/.env.development
@@ -6,5 +6,5 @@
 BUILD_PATH='./out/build/development'
 REACT_APP_ENV='development'
 
-# Add your own variables below, starting with REACT_APP_
+# Add variables below, starting with REACT_APP_
 REACT_APP_API_URL='http://development.com/api/v1'
