--- a/.env-override/.env.local
+++ b/.env-override/.env.local
@@ -10,5 +10,5 @@
 BUILD_PATH='./out/build/local'
 REACT_APP_ENV='local'
 
-# Add your own variables below, starting with REACT_APP_
+# Add variables below, starting with REACT_APP_
 REACT_APP_API_URL='http://localhost:5000/api/v1'
