--- a/.env-override/.env.production
+++ b/.env-override/.env.production
@@ -6,5 +6,5 @@
 BUILD_PATH='./out/build/production'
 REACT_APP_ENV='production'
 
-# Add your own variables below, starting with REACT_APP_
+# Add variables below, starting with REACT_APP_
 REACT_APP_API_URL='http://production.com/api/v1'
