--- a/.env-override/.env.qa
+++ b/.env-override/.env.qa
@@ -6,5 +6,5 @@
 BUILD_PATH='./out/build/qa'
 REACT_APP_ENV='qa'
 
-# Add your own variables below, starting with REACT_APP_
+# Add variables below, starting with REACT_APP_
 REACT_APP_API_URL='http://qa.com/api/v1'
