--- a/.env-override/.env.test
+++ b/.env-override/.env.test
@@ -4,5 +4,5 @@
 # Don't touch
 REACT_APP_ENV='test'
 
-# Add your own variables below, starting with REACT_APP_
+# Add variables below, starting with REACT_APP_
 REACT_APP_API_URL=='https://test.com/api/v1'
