--- a/.env-override/.env.staging
+++ b/.env-override/.env.staging
@@ -6,5 +6,5 @@
 BUILD_PATH='./out/build/staging'
 REACT_APP_ENV='staging'
 
-# Add your own variables below, starting with REACT_APP_
+# Add variables below, starting with REACT_APP_
 REACT_APP_API_URL='https://staging.com/api/v1'
