--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,5 +17,8 @@
   "stylelint.validate": ["css", "scss"],
   "[scss]": {
     "editor.defaultFormatter": "sibiraj-s.vscode-scss-formatter"
+  },
+  "files.associations": {
+    ".env.https.local": "dotenv"
   }
 }
